inbox-on-singularity-be/gke/inbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inbox-service
spec:
  selector:
    app: inbox-be
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
