inbox-on-singularity-be/gke/inbox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inbox-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: inbox-external-ip
    networking.gke.io/managed-certificates: inbox-managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: inbox-service
      port:
        number: 80
